Added support of i486 on xp build!

--- a/bz80dll/bz80dll/bz80dll.vcxproj
+++ b/bz80dll/bz80dll/bz80dll.vcxproj
@@ -290,6 +290,7 @@
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
+      <EnableEnhancedInstructionSet>NoExtensions</EnableEnhancedInstructionSet>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
