Fixed some bugs and changed Z80 Core for the
future update including support of FDD emulation!

--- a/gdi8001/GDI8001.vcxproj.filters
+++ b/gdi8001/GDI8001.vcxproj.filters
@@ -32,6 +32,9 @@
     <ClCompile Include="GDI8001.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Z80.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="GDI8001.rc">
