--- a/gdi8001/GDI8001.vcxproj
+++ b/gdi8001/GDI8001.vcxproj
@@ -554,6 +554,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GDI8001.cpp" />
+    <ClCompile Include="Z80.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="GDI8001.rc" />
